# ace-step1.5

./: README.md  pyproject.toml
acestep/core/generation/handler/: diffusion.py
checkpoints/: README.md
ckpt/: README.md
examples/: run_music_generation.py
src/acestep/: __init__.py  pipeline.py
